--- a/PHP/zwemclub/app.yaml
+++ b/PHP/zwemclub/app.yaml
@@ -1,4 +1,4 @@
-application: myphp
+application: zwemclub
 version: 1
 runtime: php55
 api_version: 1
@@ -16,4 +16,4 @@ handlers:
   script: \1
   
 - url: .*
-  script: index.php
+  script: main.php
